# libjoycon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  libjoycon.pu  main.c  main.cc  test.c  test.cc
android/com/mumumusuc/libjoycon/: BluetoothHelper.kt  Controller.java  PermissionHelper.kt
android/jni/: Android.mk  Application.mk  CMakeLists.txt  joycon_jni.cc
include/: console.h  controller.h  controller_defs.h  device.h  input_report.h  libjoycon.h  log.h  mcu.h  output_report.h  session.h  session2.h  tools.hpp
python/: fft.py  fft2.py  image.raw  libjoycon.py  test.py  wc.jcm
src/: controller.cc  session.cc  session2.cc
